# Camari

./: .gitignore  README.md  build.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml
NodeWebServerApp/: App.tsx  Dockerfile  app.json  blah.sh  package-lock.json  package.json
NodeWebServerApp/android/: settings.gradle
NodeWebServerApp/android/app/: build.gradle
NodeWebServerApp/android/app/src/main/java/com/nodewebserverapp/: MainActivity.kt  MainApplication.kt
NodeWebServerApp/android/app/src/main/res/values/: strings.xml
NodeWebServerApp/ios/: Podfile
NodeWebServerApp/ios/NodeWebServerApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
NodeWebServerApp/ios/NodeWebServerApp.xcodeproj/: project.pbxproj
NodeWebServerApp/ios/NodeWebServerApp.xcodeproj/xcshareddata/xcschemes/: NodeWebServerApp.xcscheme
NodeWebServerApp/nodejs-assets/nodejs-project/: main.js
camari-obs-plugin/: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  buildspec.json
camari-obs-plugin/src/: camari-source.c  camari-source.h  mdns-discovery.c  mdns-discovery.h  mjpeg-parser.c  mjpeg-parser.h  plugin-main.c  reconnect.c  reconnect.h
camari-obs-plugin/tests/: test-mjpeg-parser.c  test-reconnect.c
mobile/: .eslintignore  .eslintrc.js  .prettierignore  capacitor.config.ts  index.html  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
mobile/android/: build.gradle  gradle.properties  gradlew  settings.gradle.kts  variables.gradle
mobile/android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/camari/network/: BatteryMonitor.kt  NetworkStatus.kt
mobile/android/app/src/main/java/com/camari/streaming/: CameraManager.kt  CameraStreamPlugin.kt  HttpServer.kt  StreamingForegroundService.kt
mobile/android/app/src/main/java/com/camari/webcam/: MainActivity.kt  PluginRegistry.kt
mobile/android/app/src/main/java/dev/alexjyong/camari/: MainActivity.kt  PluginRegistry.kt
mobile/android/app/src/main/java/dev/alexjyong/camari/network/: BatteryMonitor.kt  NetworkStatus.kt
mobile/android/app/src/main/java/dev/alexjyong/camari/streaming/: CameraManager.kt  CameraStreamPlugin.kt  HttpServer.kt  StreamingForegroundService.kt
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/android/app/src/test/java/com/camari/streaming/: CameraManagerTest.kt  HttpServerTest.kt  NetworkStatusTest.kt
mobile/android/app/src/test/java/dev/alexjyong/camari/streaming/: CameraManagerTest.kt  HttpServerTest.kt  NetworkStatusTest.kt
mobile/src/: App.css  App.test.tsx  App.tsx  setupTests.ts
mobile/src/components/: BatteryWarning.css  BatteryWarning.test.tsx  BatteryWarning.tsx  CameraSwitchButton.css  CameraSwitchButton.tsx  HelpScreen.css  HelpScreen.tsx  ResolutionPicker.css  ResolutionPicker.test.tsx  ResolutionPicker.tsx  StartStreamingButton.css  StartStreamingButton.test.tsx  StartStreamingButton.tsx  StopStreamingButton.css  StopStreamingButton.tsx  StreamUrlDisplay.css  StreamUrlDisplay.test.tsx  StreamUrlDisplay.tsx  StreamingIndicator.css  StreamingIndicator.tsx  Toast.css  Toast.tsx  index.ts
mobile/src/hooks/: index.ts  useBattery.ts  useCamera.ts  useNetworkStatus.ts  useStreaming.test.ts  useStreaming.ts  useToast.ts
mobile/src/services/: CameraStreamService.ts
mobile/src/services/__mocks__/: CameraStreamService.ts
mobile/src/styles/: index.css
mobile/src/types/: camera-stream.ts  camera.ts  capacitor-camera-stream.d.ts  network.ts  streaming.ts
src/: config.xml  package-lock.json  package.json
src/www/: index.html
src/www/css/: index.css
src/www/js/: cameraModule.js  htmlPlayer.js  index.js  serverModule.js  streamingModule.js
src/www/nodejs-project/: main.js  package.json
